@@ -1,4 +1,14 @@
-fix src/connection/sqlrconnection/unixsocketseqfile.C to use file class
+configure didn't find ruby on freebsd 5.3
+python dll doesn't get built under cygwin
+perl on redhat 5.2, 6.2, 7.3 wants const char * in the typemap file
+can't find python on Mac OS 10.3
+
+
+need a "relay ping" method that tries to connect to the SQL Relay server and
+	returns true/false if that was possible or not
+
+if database is configured to accept 10 connections but sqlrelay is configured to
+	start more than 10, the startup process crashes
 
 --------------------------------------------------------------------------------
 
